# salt

./: .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  .yamllint  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  activate-salt-fm-env.sh  build_and_test.sh  configure.sh  makefile.base  spack.yaml
.claude/skills/changelog-update/: SKILL.md
.githooks/: pre-commit  pre-push
.github/workflow/: CI.yaml
.github/workflows/: CI.yaml  lint.yaml  macos.yaml  version-check.yaml
cmake/: SALT-logo.txt
cmake/modules/: CheckOutOfSourceBuild.cmake  GetPassedCMakeArgs.cmake  SALTGitHooks.cmake  SALTVersion.cmake
config_files/: config.yaml  fortran_config.yaml  itt_config.yaml  nvtx_config.yaml  perfstubs_config.yaml  roctx_config.yaml  tau_config.yaml  tau_fortran_config.yaml  tau_pure_config.yaml
include/: clang_header_includes.h.in  dprint.hpp  flang_instrumentation_constants.hpp  flang_instrumentation_point.hpp  flang_source_location.hpp  frontend.hpp.in  instrumentor.hpp  ryml_all.hpp  selectfile.hpp  tooling.hpp
src/: dprint.cpp  flang_instrumentation_point.cpp  flang_salt_instrument_plugin.cpp  flang_source_location.cpp  fparse-llvm.in  frontend.cpp  instrumentor.cpp  parse.cpp  salt_instrument_flang_plugin.cpp  saltfm.in  selectfile.cpp  selectfile_test.cpp  tooling.cpp
tests/: 1d.c  c11test.cpp  forward_decl.c  forward_decl_stub.c  hello.c  hello.f90  hello_tau.c  pure_virtual.cpp  sif_excl.c  sif_excl.cpp
tests/cuda/: cuda_test.cu  notes
tests/fortran/: alternate-return.f90  cubes.f  cubes.hand-inst.f  elemental-fn-only.f90  emptyprog.f90  funcsub.f90  hello.f90  if-stmt-continuation.f90  if-stmt-edge.f90  if-stmt-labeled.f90  if-stmt.f90  implicit-main.f90  impure-elemental-only.f90  interface_test.f90  internal-func.f90  label-do-at-end.f90  loop_test.f90  mp-elemental-only.f90  mp-pure-only.f90  myhi.f  pure-and-elemental.f90  pure-fn-only.f90  return-only.f90  separate-module-procedure.f90  sif_excl.f90  submodule_test.f90
tests/rocm/: rocm_test.c
tests/sif/: exclude_c.tau  exclude_cpp.tau  exclude_f90.tau  exclude_substring_routine_f90.tau  exclude_wildcard_routine_f90.tau  file_exclude_c.tau  file_exclude_cpp.tau  file_exclude_f90.tau  file_exclude_glob_f90.tau  file_exclude_substring_f90.tau  file_include_glob_f90.tau  file_include_match_c.tau  file_include_match_cpp.tau  file_include_match_f90.tau  file_include_nomatch_c.tau  file_include_nomatch_cpp.tau  file_include_nomatch_f90.tau  file_include_off_c.tau  file_include_off_cpp.tau  file_include_off_f90.tau  file_include_substring_f90.tau  include_routine_f90.tau  include_substring_routine_f90.tau  include_wildcard_exclude_specific_f90.tau
